feat: identify IdPs using a certificate (#4399)
(cherry picked from commit 67deca7c0aff96dfaf0c29239bcf24be0633a95e)